# iOS-GraphRAG

./: .gitignore  LICENSE
engine/: CONNECTION_GUIDE.md  PRODUCTION_HARDENING_PROMPT.md  indexer.py  pyproject.toml  schema.sql  setup_lab.py  test_ts.py  verify.py
engine/core/: indexer.py  server.py
engine/database/: schema.sql
engine/lab/: verify.py
