[project]
name = "ios-graph-rag"
version = "0.1.0"
description = "High-Performance Static Artifact GraphRAG for iOS"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=0.1.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-swift",
    "tree-sitter-objc",
    "networkx",
    "numpy",
    "sentence-transformers",
    "tqdm",
    "einops",
    "torch",
]